fix: lower z-index (#633)

--- a/framework/components/ATimeline/ATimeline.scss
+++ b/framework/components/ATimeline/ATimeline.scss
@@ -6,14 +6,14 @@ $timeline-item-width: 100%;
 $timeline-icon-border-radius: 50%;
 $timeline-icon-width: 18px;
 $timeline-icon-height: 18px;
-$timeline-icon-z-index: 200;
+$timeline-icon-z-index: 2;
 $timeline-icon-border-width: 2px;
 $timeline-time-width: 125px;
 $timeline-time-min-width: 125px;
 $timeline-time-padding: 0 10px 0 0;
 $timeline-content-margin: 0 0 0 50px;
 $timeline-line-width: 2px;
-$timeline-line-z-index: 100;
+$timeline-line-z-index: 1;
 $timeline-item-transition: $transition-duration--fast;
 $timeline-transition: background-color $timeline-item-transition;
 
@@ -111,7 +111,7 @@ $timeline-transition: background-color $timeline-item-transition;
     display: block;
     width: $timeline-line-width;
     top: 0;
-    left: 150px;
+    left: 151px;
     bottom: 0;
     z-index: $timeline-line-z-index;
     background-color: var(--control-border-weak-default);
